# rh-history

./: Cargo.toml  README.md  install.sh  install.zshrc
.github/workflows/: build-macos.yml
src/: args.rs  command.rs  constants.rs  history.rs  main.rs
