[package]
name = "rh-history"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"  # Оптимизация для уменьшения размера
lto = true       # Link Time Optimization (оптимизация на этапе линковки)
codegen-units = 1  # Объединение единиц кода для улучшения оптимизации

[dependencies]
dirs = "6.0.0"
skim = "0.17.3"
